--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
     <%= f.text_field :username %></p>
   </div>
 
-  <div class="field">  
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
@@ -30,5 +30,7 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+
+<%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path %>
 
 <%= render "devise/shared/links" %>
