--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Wishlists#index</h1>
-<p>Find me in app/views/wishlists/index.html.erb</p>
+<h1>Wishlists</h1>
+
+<ul>
+<% @lists.each do |list| %>
+  <%= link_to list.user.username, list_path(list)  %>
+<% end %>
+</ul>
