--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,7 @@
-<h1>Wishlists#show</h1>
-<p>Find me in app/views/wishlists/show.html.erb</p>
+<h1><%= @list.user.username.capitalize %>'s Wishlist</h1
+
+<ul>
+  <% @list.gifts.each do |gift| %>
+    <%= gift.name %>
+  <% end %>
+</ul>
