--- a/app/views/gifts/new.html.erb
+++ b/app/views/gifts/new.html.erb
@@ -1,2 +1,3 @@
-<h1>Gifts#new</h1>
-<p>Find me in app/views/gifts/new.html.erb</p>
+<h1>Add to Your Wishlist:</h1>
+
+<%= render partial: 'form', locals: {gift: @gift} %>
