--- a/app/views/gifts/_form.html.erb
+++ b/app/views/gifts/_form.html.erb
@@ -1,10 +1,16 @@
 <%= form_for gift do |g| %>
-<%= g.label :name %>
-<%= g.text_field :name %> <br><br>
-<%= g.label :description %>
-<%= g.text_field :description %> <br><br>
-<%= g.label :url %>
-<%= g.text_field :url %> <br><br>
+  <%= g.label :name %>
+  <%= g.text_field :name %> <br><br>
+  <%= g.label :description %>
+  <%= g.text_field :description %> <br><br>
+  <%= g.label :url %>
+  <%= g.text_field :url %> <br><br>
+
+<h2>Pick a Category: </h2>
+  <%= g.fields_for :categories do |cat| %>
+    <%= cat.label :name %>
+    <%= cat.text_field :name %>
+  <% end %>
 
 <%= g.submit %>
 <% end %>
