added links to the gift show page to show basic info about each gift

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,3 +5,5 @@
   <%= link_to list.user.username, list_path(list) if list.user != current_user %>
 <% end %>
 </ul>
+
+<%= link_to "Or browse all gifts", gifts_path %>
