--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Gifts#index</h1>
-<p>Find me in app/views/gifts/index.html.erb</p>
+<h1>Browse Gifts</h1>
+
+<ul>
+<% @gifts.each do |gift| %>
+  <li><%= link_to gift.name, gift_path(gift) %></li>
+<% end %>
+</ul>
