added partial to display search results from Amazon

--- a/app/views/gifts/new.html.erb
+++ b/app/views/gifts/new.html.erb
@@ -1,3 +1,4 @@
 <h1>Add to Your Wishlist:</h1>
 
+<%= render partial: 'aws_search', locals: {item: params[:gift_search]} %>
 <%= render partial: 'form', locals: {gift: @gift} %>
