--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -1,8 +1,9 @@
 <h1><%= @gift.name.capitalize %></h1>
 
-
-<h3>Price: </h3> <%= @gift.price %>
+<%= image_tag @gift.image %> <br>
+<strong>Price:</strong> <%= number_to_currency(@gift.price) %>
 <h3>Description: </h3><%= @gift.description %>
+<%= link_to "See it on Amazon", @gift.url, target: "_blank" %>
 
 <h3>Categories: </h3>
 <% @gift.categories.each do |cat| %>
