--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -7,5 +7,5 @@
 
 <h3>Categories: </h3>
 <% @gift.categories.each do |cat| %>
-  <%= cat.name %>
+  <%= link_to cat.name, category_path(cat) %>
 <% end %>
