add to wishlist link on gift show page checks if a gift is already in a users wishlist, if it isn't then the gift is added; if it is a flash notice says its already on the list

--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -1,5 +1,9 @@
 <h1><%= @gift.name.capitalize %></h1>
 
+<%= form_for @gift do |g|  %>
+  <%= g.submit "Add to Wishlist" %>
+<% end %>
+
 <%= image_tag @gift.image %> <br>
 <strong>Price:</strong> <%= number_to_currency(@gift.price) %>
 <h3>Description: </h3><%= @gift.description %> <br>
