--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Browse Gifts</h1>
 
-<ul>
+<table>
 <% @gifts.each do |gift| %>
-  <li><%= link_to gift.name, gift_path(gift) %></li>
+  <tr><td><%= image_tag gift.image %></td>
+      <td><%= link_to gift.name, gift_path(gift) %></td>
+  </tr>
 <% end %>
-</ul>
+</table>
