--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,13 +1,16 @@
 <h1><%= @list.user.username.capitalize %>'s Wishlist</h1>
 
-<% if @list.user = current_user %>
+<% if @list.user == current_user %>
     <%= form_tag new_gift_path %>
     <%= text_field_tag 'gift_search', nil, placeholder: 'Search for a new gift...' %>
     <%= submit_tag 'Search' %>
 <% end %>
 
-<ul>
+<table>
   <% @list.gifts.each do |gift| %>
-    <li><%= link_to gift.name, gift_path(gift) %></li> <br>
+    <tr>
+      <td><%= image_tag gift.image %></td>
+      <td><%= link_to gift.name, gift_path(gift) %></td>
+    </tr>
   <% end %>
-</ul>
+</table>
