--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,9 +1,9 @@
 <h1><%= @list.user.username.capitalize %>'s Wishlist</h1>
 
 <% if @list.user == current_user %>
-    <%= form_tag new_gift_path %>
+    <%= form_tag gifts_path, method: :get %>
     <%= text_field_tag 'gift_search', nil, placeholder: 'Search for a new gift...' %>
-    <%= submit_tag 'Search' %>
+    <%= submit_tag 'Search', name:nil %>
 <% end %>
 
 <table>
