moved amazon search to display on index page, refactored listing gifts into partial, rendered partial in lists show and categories show

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,3 @@
 <h1>Category: <%= @category.name %></h1>
 
-<table>
-<% @category.gifts.each do |gift| %>
-  <tr><td><%= image_tag gift.image %></td>
-      <td><%= link_to gift.name, gift_path(gift) %></td>
-  </tr>
-<% end %>
-</table>
+<%= render partial: 'gifts/gift_list', locals: {gifts: @category.gifts} %>
