--- a/app/views/gifts/_gift_list.html.erb
+++ b/app/views/gifts/_gift_list.html.erb
@@ -1,7 +1,10 @@
 <table>
 <% gifts.each do |gift| %>
   <tr><td><%= image_tag gift.image %></td>
-      <td><%= link_to gift.name, gift_path(gift) %></td>
+      <td><%= link_to gift.name, gift_path(gift) %><br> <br>
+          <%= form_for gift, url: gift_path(gift), html: {method: "patch"} do |g|  %>
+            <%= g.submit "Add to Wishlist" %>
+          <% end %> </td>
   </tr>
 <% end %>
 </table>
