--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -1,9 +1,13 @@
-<h1><%= "Results for #{params[:gift_search]}" unless params[:gift_search] == "" %></h1>
+<% if params[:gift_search] && params[:gift_search] != "" %>
+  <h1><%= "Results for #{params[:gift_search]}" %></h1>
 
-<h2><%= params[:gift_search] == "" ? "Browse Gifts" : "From Other Wishlists: " %></h2>
-<%= render partial: 'gifts/gift_list', locals: {gifts: @gifts} %>
+  <h2>From Other Wishlists: </h2>
+  <%= render partial: 'gifts/gift_list', locals: {gifts: @gifts} %>
 
-<% unless params[:gift_search] == "" %>
   <h2>From Amazon: </h2>
   <%= render partial: 'gifts/aws_search', locals: {item: params[:gift_search]} %>
+
+<% else %>
+  <h1>Browse Gifts: </h1>
+  <%= render partial: 'gifts/gift_list', locals: {gifts: @gifts} %>
 <% end %>
