--- a/app/views/gifts/_aws_search_form.html.erb
+++ b/app/views/gifts/_aws_search_form.html.erb
@@ -1,3 +1,4 @@
-<%= form_tag gifts_path, method: 'get' %>
-<%= text_field_tag 'gift_search', nil, placeholder: 'Search for a new gift...' %>
-<%= submit_tag 'Search', name:nil %>
+<%= form_tag gifts_path, method: 'get' do  %>
+  <%= text_field_tag 'gift_search', nil, placeholder: 'Search for a new gift...' %>
+  <%= submit_tag 'Search', name:nil %>
+<% end %>
