moved add to wishlist button to partial and added logic to prevent it from appearing if user already has the item on their wishlist

--- a/app/views/gifts/_gift_list.html.erb
+++ b/app/views/gifts/_gift_list.html.erb
@@ -2,9 +2,7 @@
 <% gifts.each do |gift| %>
   <tr><td><%= image_tag gift.image %></td>
       <td><%= link_to gift.name, gift_path(gift) %><br> <br>
-          <%= form_for gift, url: gift_path(gift), html: {method: "patch"} do |g|  %>
-            <%= g.submit "Add to Wishlist" %>
-          <% end %> </td>
+          <%= render partial: 'gifts/add_to_wishlist', locals: {gift: gift} %>
   </tr>
 <% end %>
 </table>
