gift shows 'added to your wishlist' if a gift has already been added, except on the list show page

--- a/app/views/gifts/_add_to_wishlist.html.erb
+++ b/app/views/gifts/_add_to_wishlist.html.erb
@@ -1,4 +1,6 @@
-<% unless current_user.gifts.include?(gift) %>
+<% if current_user.gifts.include?(gift) %>
+  <%= link_to "On your Wishlist", list_path(current_user.list)%>
+<% else %>
   <%= form_for gift, url: gift_path(gift), html: {method: "patch"} do |g|  %>
     <%= g.submit "Add to Wishlist" %>
   <% end %> </td>
