review index page shows the reviews for a gift, fixed typo in user model

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,7 +4,7 @@
 <% @list.gifts.each do |gift| %>
   <tr><td><%= image_tag gift.image %></td>
       <td><%= link_to gift.name, gift_path(gift) %><br><br>
-          <%= button_tag "Review", gift_reviews_path(gift) %>
+          <%= link_to "Reviews", gift_reviews_path(gift) %>
   </tr>
 <% end %>
 </table>
