new review form allows user to put in a star rating -kind of- and a comment and submit

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Reviews for: <%= @gift.name %> </h1>
 
 <% @gift.reviews.each do |review| %>
-  <%= review.user "on" review.created_on%>
+  <%= review.user %> on <%= review.created_on %>
   <%= review.stars %>
   <%= review.comment %>
 <% end %>
+
+<%= link_to "Write a review", new_gift_review_path(@gift) %>
