--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,9 +1,9 @@
 <h1>Reviews for: <%= @gift.name %> </h1>
 
 <% @gift.reviews.each do |review| %>
-  <%= review.user %> on <%= review.created_on %>
-  <%= review.stars %>
-  <%= review.comment %>
+  <strong><%= review.user.username %></strong> on <%= review.created_at.strftime("%b %d, %Y") %> <br>
+  <p>Stars: <%= review.stars %> <br><br>
+  Review: <%= review.comment %> <br><br></p>
 <% end %>
 
-<%= link_to "Write a review", new_gift_review_path(@gift) %>
+<%= link_to "Write a review", new_gift_review_path(@gift) if !@gift.wrote_review?(current_user) %>
