link to add your own gift, also added drop down for categories already saved, and included category_ids in strong params for mass assignment

--- a/app/views/gifts/_form.html.erb
+++ b/app/views/gifts/_form.html.erb
@@ -11,6 +11,8 @@
   <%= g.text_area :description %> <br><br>
 
 <h2>Pick a Category: </h2>
+  <%= g.collection_select :category_ids, Category.all, :id, :name, prompt: true %><br><br>
+  <strong>Or add your own</strong> <br><br>
   <%= g.fields_for :categories do |cat| %>
     <%= cat.label :name %>
     <%= cat.text_field :name %>
