--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,5 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<h1>Categories</h1>
+
+<% @categories.each do |cat| %>
+  <%= link_to cat.name, category_path(cat) %> <br><br>
+<% end %>
