--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,3 @@
 <h1>Categories</h1>
 
-<% @categories.each do |cat| %>
-  <%= link_to cat.name, category_path(cat) %> <br><br>
-<% end %>
+<%= render partial: 'categories/list_categories', locals: {categories: @categories} %> 
