--- a/app/views/gifts/show.html.erb
+++ b/app/views/gifts/show.html.erb
@@ -1,8 +1,6 @@
 <h1><%= @gift.name.capitalize %></h1>
 
-<%= form_for @gift do |g|  %>
-  <%= g.submit "Add to Wishlist" %>
-<% end %>
+<%= render partial: 'gifts/add_to_wishlist', locals: {gift: @gift} %> <br><br>
 
 <%= image_tag @gift.image %> <br>
 <strong>Price:</strong> <%= number_to_currency(@gift.price) %>
@@ -10,6 +8,11 @@
 <%= link_to "See it on Amazon", @gift.url, target: "_blank" %>
 
 <h3>Categories: </h3>
-<% @gift.categories.each do |cat| %>
-  <%= link_to cat.name, category_path(cat) %>
+ <%= render partial: 'categories/list_categories', locals: {categories: @gift.categories} %>
+
+<br><br>
+<% if @gift.users.include?(current_user) %>
+  <%= form_for @gift, method: "delete" do |g| %>
+  <%= g.submit "Remove from your Wishlist" %>
+  <% end %>
 <% end %>
