--- a/app/views/gifts/_add_to_wishlist.html.erb
+++ b/app/views/gifts/_add_to_wishlist.html.erb
@@ -1,4 +1,4 @@
-<% if current_user.gifts.include?(gift) %>
+<% if current_user && current_user.gifts.include?(gift) %>
   <%= link_to "On your Wishlist", list_path(current_user.list)%>
 <% else %>
   <%= form_for gift, url: gift_path(gift), html: {method: "patch"} do |g|  %>
