--- a/app/views/gifts/_gift_list.html.erb
+++ b/app/views/gifts/_gift_list.html.erb
@@ -1,8 +1,8 @@
-<table>
-<% gifts.each do |gift| %>
-  <tr><td><%= image_tag gift.image %></td>
-      <td><%= link_to gift.name, gift_path(gift) %><br> <br>
-          <%= render partial: 'gifts/add_to_wishlist', locals: {gift: gift} %>
-  </tr>
-<% end %>
-</table>
+<ul class="gifts_list">
+  <% gifts.each do |gift| %>
+    <li><%= image_tag gift.image %>
+    <%= link_to gift.name, gift_path(gift) %>
+    <%= render partial: 'gifts/add_to_wishlist', locals: {gift: gift} %></li>
+
+  <% end %>
+</ul>
