--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,9 @@
 
-<%= "Welcome #{current_user.username}" if user_signed_in? %>
-<%= link_to "Home", root_path %>
-<%= link_to "My Wishlist", list_path(current_user.list) if user_signed_in? %>
-<%= link_to "Sign In", new_user_session_path if !user_signed_in? %>
-<%= link_to "Sign Up", new_user_registration_path if !user_signed_in? %>
-<%= link_to "Sign out", destroy_user_session_path, :method => :delete if user_signed_in?%> <br>
+  <ul class="nav">
+    <li><%= "Welcome #{current_user.username}" if user_signed_in? %></li>
+    <li><%= link_to "Home", root_path %></li>
+    <li><%= link_to "My Wishlist", list_path(current_user.list) if user_signed_in? %></li>
+    <li><%= link_to "Sign In", new_user_session_path if !user_signed_in? %></li>
+    <li><%= link_to "Sign Up", new_user_registration_path if !user_signed_in? %></li>
+    <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete if user_signed_in?%></li>
+  </ul>
