--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -5,7 +5,7 @@ body {
 .wrapper {
   display: grid;
   grid-template-columns: 1fr 10fr 1fr;
-  grid-template-rows: 80px auto;
+  grid-template-rows: 130px auto;
   grid-template-areas:
     "header header header"
     ". main .";
@@ -15,7 +15,7 @@ body {
   grid-area: header;
   display: grid;
   grid-template-columns: 1fr 10fr 1fr;
-  grid-template-rows: 50px 30px;
+  grid-template-rows: 50px 80px;
   grid-template-areas:
     "nav nav nav"
     ". search ."
@@ -24,6 +24,7 @@ body {
 .nav {
   grid-area: nav;
   background: #0F2041;
+  box-shadow: 0px 1px 3px #0F2041;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -65,6 +66,33 @@ body {
 .search {
   grid-area: search;
   align-self: center;
+  margin-left: 3%;
+}
+
+.search input#gift_search {
+  position: relative;
+  width: 88%;
+  height: 2em;
+  font-size: 1em;
+  border: 1px solid #0F2041;
+  border-radius: 5px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  padding-left: 20px;
+}
+
+.search button.search_btn {
+  position: absolute;
+  width: 4em;
+  height: 3.25em;
+  border-radius: 5px;
+  background: #135fd8;
+  border: 1px solid #0F2041;
+  border-left: 0px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  font-family: FontAwesome, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  color: white;
 }
 
 .main {
