--- a/app/views/gifts/_gift_list.html.erb
+++ b/app/views/gifts/_gift_list.html.erb
@@ -1,8 +1,10 @@
-<ul class="gifts_list">
+<div class="gift_list_container">
+<ul class="gift_list">
   <% gifts.each do |gift| %>
     <li><%= image_tag gift.image %>
-    <%= link_to gift.name, gift_path(gift) %>
-    <%= render partial: 'gifts/add_to_wishlist', locals: {gift: gift} %></li>
+        <%= link_to gift.name, gift_path(gift) %>
+        <%= render partial: 'gifts/add_to_wishlist', locals: {gift: gift} %></li>
 
   <% end %>
 </ul>
+</div>
