--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -111,7 +111,8 @@ body {
   display: inline-block;
   border:1px solid #0F2041;
   border-radius: 5px;
-  padding: 1em;
+  padding: 1.5em;
+  position: relative;
 }
 
 .gift_list li img {
@@ -119,4 +120,16 @@ body {
   margin: auto;
   max-width:100%;
   max-height:100%;
+}
+
+.gift_list .button_to input {
+  width: 200px;
+  background: #0F2041;
+  color: white;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 1rem;
+  position: absolute;
+  bottom: 1.5em;
+  font-size: 12px;
 }
