--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -122,6 +122,13 @@ body {
   max-height:100%;
 }
 
+.gift_list h3 a {
+  display: block;
+  text-decoration: none;
+  color: #0F2041;
+  text-align: center;
+}
+
 .gift_list .button_to input,
 .gift_list .edit_gift input {
   width: 200px;
