--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,10 +1,9 @@
 <h1><%= @list.user.username.capitalize %>'s Wishlist</h1>
 
-<table>
-<% @list.gifts.each do |gift| %>
-  <tr><td><%= image_tag gift.image %></td>
-      <td><%= link_to gift.name, gift_path(gift) %><br><br>
-          <%= link_to "Reviews", gift_reviews_path(gift) %>
-  </tr>
+<ul class="gift_list">
+  <% @list.gifts.each do |gift| %>
+    <li><%= image_tag gift.image %>
+      <h3><%= link_to gift.name, gift_path(gift) %></h3>
+          <%= button_to "Reviews", gift_reviews_path(gift), class:'card_button' %>
 <% end %>
-</table>
+</ul>
