--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,10 +1,12 @@
 <h1>Reviews for: <%= @gift.name %> </h1>
 
-<% @gift.reviews.each do |review| %>
-  <strong><%= review.user.username %></strong> on <%= review.created_at.strftime("%b %d, %Y") %> <br>
-  <p>Stars: <%= review.stars %> <br><br>
-  Review: <%= review.comment %> <br><br></p>
-  <%= link_to "Edit Review", edit_gift_review_path(@gift, review) if current_user.wrote_review?(@gift) %>
-<% end %>
+<div class="review_list">
+  <% @gift.reviews.each do |review| %>
+    <strong><%= review.user.username %></strong> on <%= review.created_at.strftime("%b %d, %Y") %> <br>
+    <p>Stars: <%= review.stars %> <br><br>
+    Review: <%= review.comment %> </p>
+    <%= button_to "Edit Review", edit_gift_review_path(@gift, review), method: 'get', class: "edit_button" if current_user.wrote_review?(@gift) %>
+  <% end %>
+</div>
 
 <%= link_to "Write a review", new_gift_review_path(@gift) if !current_user.wrote_review?(@gift) %>
