--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  background: #F7F7F7;
 }
 .wrapper {
   display: grid;
@@ -22,6 +23,7 @@ body {
 }
 
 .nav {
+  font-family: arial;
   grid-area: nav;
   background: #0F2041;
   box-shadow: 0px 1px 3px #0F2041;
@@ -109,6 +111,7 @@ body {
 
 .gift_list li {
   display: inline-block;
+  background: white;
   border:1px solid #0F2041;
   border-radius: 5px;
   padding: 1.5em;
@@ -145,8 +148,12 @@ body {
   background: #135fd8;
 }
 
-.review_list {
-  border-bottom: 1px solid black;
+.review_item{
+  border: 1px solid #0F2041;
+  border-radius: 5px;
+  background: white;
+  margin: 1em;
+  padding: 1em;
 }
 
 .review_list .edit_button {
