--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,14 +1,18 @@
 <h1>Reviews for: <%= @gift.name %> </h1>
 
 <%= content_tag :div, class: "review_list" do %>
+  <%= content_tag :div, class: "review_item" do %>
+    <%= "No reviews here. Be the first to write one!" if @gift.reviews.length == 0 %>
+  <% end %>
+
   <% @gift.reviews.each do |review| %>
     <%= content_tag :div, class: "review_item" do %>
       <strong><%= review.user.username %></strong> on <%= review.created_at.strftime("%b %d, %Y") %> <br>
       <p>Stars: <%= review.stars %> <br><br>
       Review: <%= review.comment %> </p>
-      <%= button_to "Edit Review", edit_gift_review_path(@gift, review), method: 'get', class: "edit_button" if current_user.wrote_review?(@gift) %>
+      <%= button_to "Edit Review", edit_gift_review_path(@gift, review), method: 'get', class: "edit_button" if review.user == current_user %>
     <% end %>
   <% end %>
-<% end %>
 
-<%= link_to "Write a review", new_gift_review_path(@gift) if !current_user.wrote_review?(@gift) %>
+  <%= button_to "Write a review", new_gift_review_path(@gift), method: 'get', class:'edit_button' if !current_user.wrote_a_review?(@gift) %>
+<% end %>
