--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -1,5 +1,3 @@
-<h1>Review for <%= @review.gift.name %></h1>
-<strong><%= @review.user.username %></strong> on <%= @review.created_at.strftime("%b %d, %Y") %>
-<p><%= @review.comment %></p>
+<h1><%= "#{@review.user.username.humanize}'s Review of #{@review.gift.name}" %></h1>
 
-<%= link_to "Edit this review", edit_gift_review_path(@review.gift, @review) if @review.user == current_user %>
+<%= render partial: 'reviews/review_item', locals: {review: @review} %>
