--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -156,7 +156,7 @@ body {
   padding: 1em;
 }
 
-.edit_button {
+.big_btn {
   display: block;
   width: 97%;
   background: #0F2041;
@@ -166,4 +166,22 @@ body {
   border: none;
   border-radius: 5px;
   font-size: 12px;
+}
+
+.form {
+  background: white;
+  border: 1px solid #0F2041;
+  border-radius: 5px;
+  margin: 1em;
+  padding: 1em;
+}
+
+.form textarea {
+  resize: none;
+  box-sizing:border-box;
+  padding: 1em;
+  width: 100%;
+  height: 150px;
+  border: 1px solid #0F2041;
+  border-radius: 5px;
 }
