--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,1 +1,3 @@
-<%= render partial: 'form', locals: {review: @review} %>
+<h1>Write a New Review</h1>
+
+  <%= render partial: 'form', locals: {review: @review} %>
