--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,7 +1,13 @@
 <%= content_tag :div, class:"form" do %>
   <%= form_for [review.gift, review] do |r| %>
-    <%= r.label "Rate the Product" %>
-    <%= r.radio_button :stars, 1 %><%= r.radio_button :stars, 2 %><%= r.radio_button :stars, 3 %><%= r.radio_button :stars, 4 %><%= r.radio_button :stars, 5 %> <br><br>
+    <%= r.label "Rate the Product" %> <br><br>
+    <%= content_tag :div, class: "rating" do %>
+      <%= r.radio_button :stars, 5 %><label for="review_stars_5"></label>
+      <%= r.radio_button :stars, 4 %><label for="review_stars_4"></label>
+      <%= r.radio_button :stars, 3 %><label for="review_stars_3"></label>
+      <%= r.radio_button :stars, 2 %><label for="review_stars_2"></label>
+      <%= r.radio_button :stars, 1 %><label for="review_stars_1"></label>
+    <% end %> <br><br>
     <p><%= r.label "Tell us what you thought of this gift:" %></p>
     <%= r.text_area :comment %> <br><br>
     <%= r.submit class:"big_btn" %>
