--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -23,10 +23,11 @@ body {
   position: fixed;
   z-index: 100;
   font-family: arial;
-  background: #0F2041;
-  box-shadow: 0px 1px 3px #0F2041;
+  background: #3366ff;
+  box-shadow: 0px 1px 3px #3366ff;
   margin: 0;
-  padding: 5px;
+  padding: 0;
+  height: 60px;
   display: grid;
   align-items: center;
   justify-items: center;
@@ -64,21 +65,22 @@ body {
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
   padding-left: 20px;
-  margin-left: 30px;
+  margin-left: 40px;
 }
 
 .search button.search_btn {
   position: absolute;
   width: 4em;
-  height: 3.35em;
+  height: 3.25em;
   border-radius: 5px;
-  background: #135fd8;
+  background: #0F2041;
   border: 1px solid #0F2041;
   border-left: 0px;
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   font-family: FontAwesome, 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: white;
+  margin-right: 40px;
 }
 
 .top_bar .welcome {
@@ -91,41 +93,43 @@ body {
 /**** nav  ****/
 
 .nav {
-  font-family: arial;
   grid-area: nav;
+  font-family: arial;
   background: #0F2041;
   box-shadow: 0px 1px 3px #0F2041;
   list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
+
+}
+
+.nav li:empty {
+  display: none;
+}
+
+ul.nav li:first-child {
+  margin-left: 5em;
 }
 
 .nav li {
   display: inline-block;
-  float: left;
-  margin-top: 1em;
   color: white;
+  padding: 10px;
 }
 
 .nav li a{
   color: white;
   text-decoration: none;
-  margin: 1em;
-  padding: 1em;
+  padding: 10px;
+  margin: 0 10px 0 10px;
 }
 
 .nav li a:hover {
-  background-color: #135fd8;
+  background-color: #99ccff;
+  padding: 10px;
+  margin: 0 10px 0 10px;
 }
-
-.nav li.welcome {
-  float:right;
-  margin-right: 2em;
-}
-
-/**** search bar  ****/
-
-
 
 .wrapper {
   display: grid;
