--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,5 +1,7 @@
 <ul class="nav">
+  <li><%= link_to "Home", root_path %></li>
   <li><%= link_to "My Wishlist", list_path(current_user.list) if user_signed_in? %></li>
+  <li><%= link_to "My Reviews", user_reviews_path(current_user) if user_signed_in? %></li>
   <li><%= link_to "Sign In", new_user_session_path if !user_signed_in? %></li>
   <li><%= link_to "Sign Up", new_user_registration_path if !user_signed_in? %></li>
   <li><%= link_to "Sign out", destroy_user_session_path, :method => :delete if user_signed_in?%></li>
