--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <body>
       <header class="header">
           <%= render 'layouts/header' %>
+          <%= render 'layouts/navbar' %>
       </header>
 
     <div class="wrapper">
