--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -125,10 +125,10 @@ ul.nav li:first-child {
   margin: 0 10px 0 10px;
 }
 
-.nav li a:hover {
+.nav li:hover {
   background-color: #99ccff;
   padding: 10px;
-  margin: 0 10px 0 10px;
+  box-shadow: 0px 0 3px 0 #99ccff;
 }
 
 .wrapper {
